增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
       <span>ZDSchool</span>
-      <li class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
-        <a class="mc-button__primary mc-button__green-s1" href="/get-minecraft" aria-label="获取 Minecraft" data-aem-contentname="获取 Minecraft" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="获取 Minecraft">获取 Minecraft</a>
-      </li>
+      <nav class="mc-globalhead__accountnav" aria-label="Account Navigation" data-bi-id="c3c2m2r1a1"
+        data-bi-name="c3c2m2r1a1">
+        <ul>
+          <li class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
+            <a class="mc-button__primary mc-button__green-s1" href="/get-minecraft" aria-label="获取 Minecraft"
+              data-aem-contentname="获取 Minecraft" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="获取 Minecraft">获取
+              Minecraft</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
       <div bp="12">
