增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
       <span>ZDSchool</span>
+      <section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
+        data-bi-name="mc-globalhead__navcontainer"></section>
       <nav class="mc-globalhead__accountnav" aria-label="Account Navigation" data-bi-id="c3c2m2r1a1"
         data-bi-name="c3c2m2r1a1">
         <ul>
