增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/headerclientLibNew.33f62d5b30557ab9c48cf8860c25d242.css" />
+  <link rel="stylesheet" href="./css/minecraft.css" />
   <!-- 引入 Element 样式 -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
   <!-- 引入 Element 组件库 -->
@@ -45,9 +45,9 @@
       <nav class="mc-globalhead__accountnav" aria-label="Account Navigation" data-bi-id="c3c2m2r1a1"
         data-bi-name="c3c2m2r1a1">
         <ul>
-          <li class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
-            <a class="mc-button__primary mc-button__green-s1" href="/get-minecraft" aria-label="获取 Minecraft"
-              data-aem-contentname="获取 Minecraft" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="获取 Minecraft">获取
+          <li style="list-style-type: none;" class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
+            <a class="mc-button__primary mc-button__green-s1" href="/about" aria-label="关于本项目"
+              data-aem-contentname="关于本项目" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="关于本项目">获取
               Minecraft</a>
           </li>
         </ul>
