增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <ul>
           <li style="list-style-type: none;" class="mc-globalhead__btnlist-container" data-bi-id="c2c3c2m2r1a1" data-bi-name="c2c3c2m2r1a1">
             <a class="mc-button__primary mc-button__green-s1" href="/about" aria-label="关于本项目"
-              data-aem-contentname="关于本项目" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="关于本项目">获取
-              Minecraft</a>
+              data-aem-contentname="关于本项目" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="关于本项目">关于本项目</a>
           </li>
         </ul>
       </nav>
