--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <div class="buttons">
           <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
+        <div class="buttons" style="margin-top: 2%;">
+          <a role="button" class="btn btn-primary" href="/about">关于本项目</a>
+        </div>
       </div>
     </section>
     <section id="second">
