增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
         <div class="buttons" style="margin-top: 2%;">
-          <a role="button" class="btn1 btn1-primary" href="/about">关于本项目</a>
+          <a role="button" class="btn1 btn1-primary" href="/about" style="background-color: #49b1f5; box-shadow: 0 -4px rgb(0 0 0 / 30%) inset, 0 4px rgb(255 255 255 / 50%) inset, -4px 0 rgb(255 255 255 / 50%) inset, 4px 0 rgb(0 0 0 / 30%) inset;">关于本项目</a>
         </div>
       </div>
     </section>
