增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="./css/minecraft.css" />
+  <!-- 测试引入 Minecraft官网 样式 -->
+  <link type="text/css" rel="styleSheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main.805dcc1f0ba781a932778709d0cdf74c.css" />
+  <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/clientlib-site.9d526b11e6b133e7b59d9a246894e540.css" />
+  <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/components.da20e3b14b7fad2c51c06a76fb23b8c8.css" />
+
   <!-- 引入 Element 样式 -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
   <!-- 引入 Element 组件库 -->
@@ -62,7 +67,7 @@
         <div class="buttons">
           <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
-        <div class="buttons" style="margin-top: 2%;">
+        <div class="buttons" style="margin-top: 10px;">
           <a role="button" class="btn1 btn1-primary" href="/about" style="background-color: #49b1f5; box-shadow: 0 -4px rgb(0 0 0 / 30%) inset, 0 4px rgb(255 255 255 / 50%) inset, -4px 0 rgb(255 255 255 / 50%) inset, 4px 0 rgb(0 0 0 / 30%) inset;">关于本项目</a>
         </div>
       </div>
