--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="./css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
+  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main.fe8350adb192ca7a036522a4d7ea25e6.js"></script>
+  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/dependencies.2491deac7cd98689d646a6931c763835.js"></script>
+  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/components.fbae17716a083293c1145bb1abdca602.js"></script>
+  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/clientlib-site.c5d87adb838103deee0b011beebf8de2.js"></script>
   <link type="text/css" rel="styleSheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main.805dcc1f0ba781a932778709d0cdf74c.css" />
   <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/clientlib-site.9d526b11e6b133e7b59d9a246894e540.css" />
   <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/components.da20e3b14b7fad2c51c06a76fb23b8c8.css" />
