增加提示框 修复已知BUG

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="./css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
-  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main.fe8350adb192ca7a036522a4d7ea25e6.js"></script>
-  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/dependencies.2491deac7cd98689d646a6931c763835.js"></script>
-  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/components.fbae17716a083293c1145bb1abdca602.js"></script>
-  <script src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/clientlib-site.c5d87adb838103deee0b011beebf8de2.js"></script>
-  <link type="text/css" rel="styleSheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main.805dcc1f0ba781a932778709d0cdf74c.css" />
-  <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/clientlib-site.9d526b11e6b133e7b59d9a246894e540.css" />
-  <link type="text/css" rel="stylesheet" href="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/components.da20e3b14b7fad2c51c06a76fb23b8c8.css" />
+
 
   <!-- 引入 Element 样式 -->
   <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
@@ -49,7 +43,7 @@
     <header>
       <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
       <span>ZDSchool</span>
-      <section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
+      <!--<section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
         data-bi-name="mc-globalhead__navcontainer"></section>
       <nav class="mc-globalhead__accountnav" aria-label="Account Navigation" data-bi-id="c3c2m2r1a1"
         data-bi-name="c3c2m2r1a1">
@@ -59,7 +53,7 @@
               data-aem-contentname="关于本项目" target="_self" data-bi-id="n1c2c3c2m2r1a1" data-bi-name="关于本项目">关于本项目</a>
           </li>
         </ul>
-      </nav>
+      </nav>-->
     </header>
     <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
       <div bp="12">
