修改主页通知提示逻辑

--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
             duration: 15000,
             showClose: true,
             offset: 50,
-            onClose: alert('this is test alert.')
+            onClose: function () {
+              console.log('Test\n通知已关闭')
+            }
           });
         },
 
