修改主页通知提示逻辑

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             showClose: true,
             offset: 50,
             onClose: function () {
-              console.log('Test\n通知已关闭')
+              alert(hhh);
             }
           });
         },
