修改主页通知提示逻辑

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             duration: 15000,
             showClose: true,
             offset: 50,
-            onClose: function () {
+            onClose: () => {
               alert(hhh);
             }
           });
