--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             duration: 15000,
             showClose: true,
             offset: 50,
-            onClose: () => {
-              alert(hhh);
+            onclick: () => {
+              alert("test");
             }
           });
         },
