修改通知弹窗

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <el-button plain @click="open2" style="display: none;">
       Button2
     </el-button>
-    <el-button plain @click="open3" style="display: none;">
+    <el-button plain @click="open3">
       消息
     </el-button>
     <el-button plain @click="open4" style="display: none;">
