--- a/About/index.html
+++ b/About/index.html
@@ -26,7 +26,7 @@
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="./css/minecraft.css" />
+  <link rel="stylesheet" href="/css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
 
 
@@ -74,7 +74,7 @@
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-          <img src="./assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+          <img src="/assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
