修改文件路径

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
           <img class="img" src="assets/members.jpg">
+          <p><font style="color: #dcdfe6;"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
@@ -273,14 +274,14 @@
   <script>
     let player = new Player({
       "id": "mse",
-      "url": "https://file.kjchmc.cn/d/Minecraft/school/2022届初三毕业视频成稿.mp4",
+      "url": "https://file.kjchmc.cn/d/忠德学校资料/2022届初三毕业视频成稿.mp4",
       "playsinline": true,
       "whitelist": [
         ""
       ],
       "width": null,
       "height": null,
-      "poster": "https://file.kjchmc.cn/d/Minecraft/school/学校照片/poster.jpg",
+      "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster.jpg",
       "fluid": false,
       "playbackRate": [
         0.5,
