--- a/video.html
+++ b/video.html
@@ -15,14 +15,14 @@
     <script>
         let player = new Player({
           "id": "mse",
-          "url": "https://file.kjchmc.cn/d/Minecraft/school/2022届初三毕业视频成稿.mp4",
+          "url": "https://file.kjchmc.cn/d/忠德学校资料/2022届初三毕业视频成稿.mp4",
           "playsinline": true,
           "whitelist": [
             ""
           ],
           "width": null,
           "height": null,
-          "poster": "https://file.kjchmc.cn/d/Minecraft/school/学校照片/poster.jpg",
+          "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster.jpg",
           "fluid": false,
           "playbackRate": [
             0.5,
