--- a/video.html
+++ b/video.html
@@ -13,24 +13,45 @@
     <div id="mse"></div>
     <script src="//unpkg.byted-static.com/xgplayer/2.31.6/browser/index.js" charset="utf-8"></script>
     <script>
-        let player = new Player({
-          "id": "mse",
-          "url": "https://file.kjchmc.cn/d/忠德学校资料/2022届初三毕业视频成稿.mp4",
-          "playsinline": true,
-          "whitelist": [
-            ""
-          ],
-          "width": null,
-          "height": null,
-          "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster.jpg",
-          "fluid": false,
-          "playbackRate": [
-            0.5,
-            1,
-            1.5,
-            2
-          ],
-        });
-      </script>
+      let player = new Player({
+        "id": "mse",
+        "playsinline": true,
+        "whitelist": [
+          ""
+        ],
+        "url": "https://file.kjchmc.cn/d/忠德学校资料/2022届初三毕业视频成稿.mp4",
+        "fluid": true,
+        "volume": 1,
+        "screenShot": true,
+        "closeVideoDblclick": false,
+        "keyShortcut": "on",
+        "download": true,
+        "playbackRate": [
+          0.5,
+          1,
+          1.5,
+          2
+        ],
+        "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster.jpg",
+        "progressDot": [
+          {
+            "time": 1,
+            "text": "开头"
+          },
+          {
+            "time": 292,
+            "text": "年级单人照"
+          },
+          {
+            "time": 394,
+            "text": "回顾校园"
+          },
+          {
+            "time": 444,
+            "text": "片尾鸣谢"
+          }
+        ]
+      });
+    </script>
   </body>
 </html>
