--- a/About/index.html
+++ b/About/index.html
@@ -10,20 +10,20 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
   <title data-t="indexTitle">忠德学校 | 几个22届初三毕业生的作品</title>
-  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="assets/logo.png">
+  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#181818">
   <meta name="apple-mobile-web-app-title" content="Unknown Domain">
-  <link rel="apple-touch-icon-precomposed" href="assets/logo.png">
-  <meta name="msapplication-TileImage" content="assets/logo.png">
+  <link rel="apple-touch-icon-precomposed" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
+  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
-  <link type="text/css" rel="styleSheet" href="css/shake.css" />
-  <link type="text/css" rel="stylesheet" href="css/scrollbar.css" />
-  <link type="text/css" rel="styleSheet" href="css/main.less" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/shake.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/scrollbar.css" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="css/minecraft.css" />
@@ -41,7 +41,7 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png"></a>
       <span>ZDSchool</span>
       <!--<section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
         data-bi-name="mc-globalhead__navcontainer"></section>
@@ -74,7 +74,7 @@
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-          <img src="assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+          <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
