--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
   <title data-t="indexTitle">忠德学校 | 几个22届初三毕业生的作品</title>
-  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="assets/logo.png">
+  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#181818">
   <meta name="apple-mobile-web-app-title" content="Unknown Domain">
-  <link rel="apple-touch-icon-precomposed" href="assets/logo.png">
-  <meta name="msapplication-TileImage" content="assets/logo.png">
+  <link rel="apple-touch-icon-precomposed" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
+  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
-  <link type="text/css" rel="styleSheet" href="css/shake.css" />
-  <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
-  <link type="text/css" rel="styleSheet" href="css/main.less" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/shake.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/scrollbar.css" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="./css/minecraft.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
 
 
@@ -41,7 +41,7 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="assets/images/table.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png"></a>
       <span>ZDSchool</span>
       <!--<section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
         data-bi-name="mc-globalhead__navcontainer"></section>
@@ -55,9 +55,9 @@
         </ul>
       </nav>-->
     </header>
-    <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
+    <section id="first" bp="grid vertical-center" style="background-image: url(https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/backgrounds/bg.png);">
       <div bp="12">
-        <img alt="logo" class="shake-slow logo" src="assets/images/kjch.png">
+        <img alt="logo" class="shake-slow logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/kjch.png">
         <h1>ZDSchool</h1>
         <h3>2022届初三毕业生建造的忠德学校</h3>
         <p>（肝劲十足）</p>
@@ -87,7 +87,7 @@
       </section>
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
-          <img class="img" src="assets/members.jpg">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members.jpg">
           <p><font style="color: #dcdfe6;"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
@@ -158,32 +158,32 @@
       <h1>建筑成员</h1>
       <div>
         <section>
-          <img class="img" src="/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->
           <h3>kjch况佳城</h3>
           <p>kjch666</p>
         </section>
         <section>
-          <img class="img" src="/assets/members/H2O2R.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/H2O2R.png">
           <h3>蒋昊</h3>
           <p>H2O2R</p>
         </section>
         <section>
-          <img class="img" src="/assets/members/xhj.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/xhj.png">
           <h3>董洪宇</h3>
           <p>xhj</p>
         </section>
         <section>
-          <img class="img" src="/assets/members/lh.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/lh.png">
           <h3>李辉</h3>
           <p>woshidas**bi</p>
         </section>
         <section>
-          <img class="img" src="/assets/members/putput11.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/putput11.png">
           <h3>吴中瑞</h3>
           <p>putput11</p>
         </section>
         <section>
-          <img class="img" src="/assets/members/test.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/test.png">
           <h3>老况的摄像机</h3>
           <p>test</p>
         </section>
@@ -202,7 +202,7 @@
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-          <img src="./assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+          <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
