--- a/About/index.html
+++ b/About/index.html
@@ -10,23 +10,23 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
   <title data-t="indexTitle">忠德学校 | 几个22届初三毕业生的作品</title>
-  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/favicon.ico">
+  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
+  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/assets/images/table.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#181818">
   <meta name="apple-mobile-web-app-title" content="Unknown Domain">
-  <link rel="apple-touch-icon-precomposed" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
-  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png">
+  <link rel="apple-touch-icon-precomposed" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/assets/images/table.png">
+  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/assets/images/table.png">
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
-  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/shake.css" />
-  <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/scrollbar.css" />
-  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/main.less" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/css/shake.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/css/scrollbar.css" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="css/minecraft.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
 
 
@@ -41,7 +41,7 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/About/assets/images/table.png"></a>
       <span>ZDSchool</span>
       <!--<section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
         data-bi-name="mc-globalhead__navcontainer"></section>
