--- a/About/index.html
+++ b/About/index.html
@@ -66,7 +66,7 @@
           <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" target="_blank">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
         <div class="buttons" style="margin-top: 10px;">
-          <a role="button" class="btn1 btn1-primary" href="./About/index.html" style="background-color: #49b1f5; box-shadow: 0 -4px rgb(0 0 0 / 30%) inset, 0 4px rgb(255 255 255 / 50%) inset, -4px 0 rgb(255 255 255 / 50%) inset, 4px 0 rgb(0 0 0 / 30%) inset;">关于本项目</a>
+          <a role="button" class="btn1 btn1-primary" href="/About/index.html" style="background-color: #49b1f5; box-shadow: 0 -4px rgb(0 0 0 / 30%) inset, 0 4px rgb(255 255 255 / 50%) inset, -4px 0 rgb(255 255 255 / 50%) inset, 4px 0 rgb(0 0 0 / 30%) inset;">关于本项目</a>
         </div>
       </div>
     </section>
@@ -74,7 +74,7 @@
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
           <!--<div id="mse"></div>-->
-          <iframe src="./video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          <iframe src="/video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
           <h1>毕业纪念</h1>
@@ -101,7 +101,7 @@
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
           <!--<div id="mse"></div>-->
-          <iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          <iframe src="/video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
           <h1>Look Back</h1>
