--- a/About/index.html
+++ b/About/index.html
@@ -26,7 +26,7 @@
   <link type="text/css" rel="styleSheet" href="css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="./css/minecraft.css" />
+  <link rel="stylesheet" href="/css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
 
 
@@ -305,6 +305,6 @@
       "download": true,
     });
   </script>
-  <script src="index.js"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
