--- a/About/index.html
+++ b/About/index.html
@@ -21,12 +21,12 @@
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
-  <link type="text/css" rel="styleSheet" href="../css/shake.css" />
-  <link type="text/css" rel="stylesheet" href="../css/scrollbar.css" />
-  <link type="text/css" rel="styleSheet" href="../css/main.less" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/shake.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/scrollbar.css" />
+  <link type="text/css" rel="styleSheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/main.less" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <link rel="stylesheet" href="../css/minecraft.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/css/minecraft.css" />
   <!-- 测试引入 Minecraft官网 样式 -->
 
 
@@ -41,7 +41,7 @@
 <body>
   <main>
     <header>
-      <a href="/"><img alt="logo" class="logo" src="../assets/images/table.png"></a>
+      <a href="/"><img alt="logo" class="logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/table.png"></a>
       <span>ZDSchool</span>
       <!--<section class="mc-globalhead__navsection" id="mc-globalhead__navcontainer" data-bi-id="c2m2r1a1"
         data-bi-name="mc-globalhead__navcontainer"></section>
@@ -55,9 +55,9 @@
         </ul>
       </nav>-->
     </header>
-    <section id="first" bp="grid vertical-center" style="background-image: url(../assets/backgrounds/bg.png);">
+    <section id="first" bp="grid vertical-center" style="background-image: url(https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/backgrounds/bg.png);">
       <div bp="12">
-        <img alt="logo" class="shake-slow logo" src="../assets/images/kjch.png">
+        <img alt="logo" class="shake-slow logo" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/kjch.png">
         <h1>ZDSchool</h1>
         <h3>2022届初三毕业生建造的忠德学校</h3>
         <p>（肝劲十足）</p>
@@ -87,7 +87,7 @@
       </section>
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
-          <img class="img" src="../assets/members.jpg">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members.jpg">
           <p><font style="color: #dcdfe6;"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
@@ -113,18 +113,18 @@
       </section>
       <h1>更多图片</h1>
       <div class="more-img">
-        <img src="../assets/images/1.png" />
-        <img src="../assets/images/2.png" />
-        <img src="../assets/images/3.png" />
-        <img src="../assets/images/4.png" />
-        <img src="../assets/images/5.png" />
-        <img src="../assets/images/6.png" />
-        <img src="../assets/images/7.png" />
-        <img src="../assets/images/8.png" />
-        <img src="../assets/images/9.png" />
-        <img src="../assets/images/10.png" />
-        <img src="../assets/images/11.png" />
-        <img src="../assets/images/12.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/1.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/2.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/3.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/4.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/5.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/6.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/7.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/8.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/9.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/10.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/11.png" />
+        <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/12.png" />
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
@@ -202,7 +202,7 @@
       <a href="http://www.beian.miit.gov.cn" target="_blank">冀ICP备19023170号</a>
       <a target="_blank" rel="noopener external nofollow noreferrer" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011202001885">
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-          <img src="../assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
+          <img src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
