--- a/About/index.html
+++ b/About/index.html
@@ -10,14 +10,14 @@
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <meta name="theme-color" content="#181818">
   <title data-t="indexTitle">忠德学校 | 几个22届初三毕业生的作品</title>
-  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/favicon.ico">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="assets/logo.png">
+  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/logo.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#181818">
   <meta name="apple-mobile-web-app-title" content="Unknown Domain">
-  <link rel="apple-touch-icon-precomposed" href="assets/logo.png">
-  <meta name="msapplication-TileImage" content="assets/logo.png">
+  <link rel="apple-touch-icon-precomposed" href="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/logo.png">
+  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/logo.png">
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
@@ -158,32 +158,32 @@
       <h1>建筑成员</h1>
       <div>
         <section>
-          <img class="img" src="./assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/kjch666.png"><!--https://minotar.net/helm/kjch666/100.png-->
           <h3>kjch况佳城</h3>
           <p>kjch666</p>
         </section>
         <section>
-          <img class="img" src="./assets/members/H2O2R.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/H2O2R.png">
           <h3>蒋昊</h3>
           <p>H2O2R</p>
         </section>
         <section>
-          <img class="img" src="./assets/members/xhj.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/xhj.png">
           <h3>董洪宇</h3>
           <p>xhj</p>
         </section>
         <section>
-          <img class="img" src="./assets/members/lh.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/lh.png">
           <h3>李辉</h3>
           <p>woshidas**bi</p>
         </section>
         <section>
-          <img class="img" src="./assets/members/putput11.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/putput11.png">
           <h3>吴中瑞</h3>
           <p>putput11</p>
         </section>
         <section>
-          <img class="img" src="./assets/members/test.png">
+          <img class="img" src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/assets/members/test.png">
           <h3>老况的摄像机</h3>
           <p>test</p>
         </section>
@@ -305,6 +305,6 @@
       "download": true,
     });
   </script>
-  <script src="/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/1834423612/zdschool@master/index.js"></script>
 </body>
 </html>
