--- a/index.html
+++ b/index.html
@@ -111,6 +111,24 @@
           <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
         </div>
       </section>
+
+      <!-- 2023.2.9 新增并修改视频 Iframe 背景图 -->
+      <section bp="grid vertical-center">
+        <div bp="last@md 4@md 10 offset-2">
+          <!--<div id="mse"></div>-->
+          <!--<iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
+          <iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" allowtransparency="true" name="main" style="width:100%;height:100%;flex: 1;z-index: 100px;background-size:cover;background-image:url(https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png)"> </iframe>
+        </div>
+        <div class="container" bp="first@md 12 5@md offset-2@md">
+          <h1>《放心去飞》教师合唱MV</h1>
+          <p>“聚是一团火，散是满天星”</p>
+          <p>用歌声祝福同学们前程似锦</p>
+          <p>-- 修改视频伴奏为歌曲原声</p>
+          <p>视频制作来自 蒋昊</p>
+          <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
+        </div>
+      </section>
+
       <h1>更多图片</h1>
       <div class="more-img">
         <img src="./assets/images/1.png" />
