--- a/video2.html
+++ b/video2.html
@@ -20,7 +20,7 @@
                 ""
             ],
             "url": "https://file.kjchmc.cn/d/忠德学校资料/放心去飞MV.mp4",
-            "fluid": true,
+            "fluid": false,
             "volume": 1,
             "screenShot": true,
             "closeVideoDblclick": false,
@@ -32,6 +32,7 @@
                 1.5,
                 2
             ],
+            "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png"
         });
     </script>
   </body>
