--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
           <!--<div id="mse"></div>-->
-          <!--<iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
-          <iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" allowtransparency="true" name="main" style="width:100%;height:100%;flex: 1;z-index: 100px;background-size:cover;background-image:url(https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png)"> </iframe>
+          <iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          <!--<iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" allowtransparency="true" name="main" style="width:100%;height:100%;flex: 1;z-index: 100px;background-size:cover;background-image:url(https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png)"> </iframe>-->
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
           <h1>《放心去飞》教师合唱MV</h1>
