--- a/video2.html
+++ b/video2.html
@@ -21,7 +21,7 @@
 				""
 		],
 		"poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png",
-		"fluid": true,
+		"fluid": false,
 		"x5-video-player-type": "h5",
 		"keyShortcut": "on",
 		"closeVideoClick": false,
