--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
           <!--<div id="mse"></div>-->
-          <iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          <div class="iframe-box" id="iframe-box">
+            <iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+          </div>
         </div>
         <div class="container right" bp="4@md offset-8@md 12 offset-1">
           <h1>Look Back</h1>
@@ -302,26 +304,22 @@
 
   <!-- 引入西瓜视频播放器组件 -->
   <script src="//unpkg.byted-static.com/xgplayer/2.31.6/browser/index.js" charset="utf-8"></script>
+  
+  <!-- iframe居中 -->
   <script>
-    let player = new Player({
-      "id": "mse",
-      "url": "https://file.kjchmc.cn/d/忠德学校资料/2022届初三毕业视频成稿.mp4",
-      "playsinline": true,
-      "whitelist": [
-        ""
-      ],
-      "width": null,
-      "height": null,
-      "poster": "https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster.jpg",
-      "fluid": false,
-      "playbackRate": [
-        0.5,
-        1,
-        1.5,
-        2
-      ],
-      "download": true,
-    });
+    window.onload=function()
+    {
+      var oBox=document.getElementById('iframe-box');
+      adjustResize();
+      window.onresize=window.onscroll=adjustResize;
+      function adjustResize()
+      {
+        var iWidth=document.documentElement.clientWidth;
+        var iHegiht=Math.max(document.documentElement.clientHeight,document.body.clientHeight);
+        oBox.style.left=(iWidth-oBox.offsetWidth)/2+'px';
+        oBox.style.top=(iHegiht-oBox.offsetHeight)/2+'px';
+      }
+    }
   </script>
   <script src="index.js"></script>
 </body>
