--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section bp="grid vertical-center">
         <div bp="10 offset-2 5@md offset-2@md">
           <!--<div id="mse"></div>-->
-          <div class="iframe-box" id="iframe-box">
+          <div class="iframe-body-sty">
             <iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
           </div>
         </div>
