--- a/video2.html
+++ b/video2.html
@@ -6,7 +6,7 @@
   <meta name=viewport
     content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
   <meta name="referrer" content="no-referrer">
-  <title>xgplayer</title>
+  <title>放心去飞MV</title>
   <style type="text/css">
     html,
     body {
@@ -24,7 +24,7 @@
   <script>
     let player = new Player({
       "id": "mse",
-      "url": "https://file.kjchmc.cn/d/%E5%BF%A0%E5%BE%B7%E5%AD%A6%E6%A0%A1%E8%B5%84%E6%96%99/%E6%94%BE%E5%BF%83%E5%8E%BB%E9%A3%9EMV.mp4",
+      "url": "https://file.kjchmc.cn/d/忠德学校资料/放心去飞MV.mp4",
       "playsinline": true,
       "whitelist": [
         ""
