重新修改布局

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
           <img class="img" src="assets/members.jpg">
-          <p><font style="color: #dcdfe6;"><strong>(点击图片预览大图)</strong></font></p>
+          <font style="color: #dcdfe6;position: absolute;"><strong>(点击图片预览大图)</strong></font>
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
@@ -118,7 +118,7 @@
 
       <!-- 2023.2.9 新增并修改视频 Iframe 背景图 -->
       <section bp="grid vertical-center">
-        <div bp="last@md 4@md 10 offset-2">
+        <div bp="3@md offset-7@md">
           <!--<div id="mse"></div>-->
           <div class="iframe-body">
             <iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
@@ -126,7 +126,8 @@
           </div>
         </div>
         <div class="container" bp="first@md 12 5@md offset-2@md">
-          <h1>《放心去飞》教师合唱MV</h1>
+          <h1>《放心去飞》</h1>
+          <h1>教师合唱MV</h1>
           <p>“聚是一团火，散是满天星”</p>
           <p>用歌声祝福同学们前程似锦</p>
           <p>-- 修改视频伴奏为歌曲原声</p>
