--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h1>教师合唱MV</h1>
           <p>“聚是一团火，散是满天星”</p>
           <p>用歌声祝福同学们前程似锦</p>
-          <p>-- 修改视频伴奏为歌曲原声</p>
+          <p style="text-decoration: underline;text-decoration-style: wavy;text-decoration-color: #779fe2bd;">修改视频伴奏为歌曲原声</p>
           <p>视频制作来自 蒋昊</p>
           <a class="small">(点击图片</a> <i class="fa-solid fa-circle-play"></i> <a class="small">播放视频)</a>
         </div>
