--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <!--<iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" allowtransparency="true" name="main" style="width:100%;height:100%;flex: 1;z-index: 100px;background-size:cover;background-image:url(https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png)"> </iframe>-->
           </div>
         </div>
-        <div class="container" bp="first@md 12 5@md offset-2@md">
+        <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>《放心去飞》</h1>
           <h1>教师合唱MV</h1>
           <p>“聚是一团火，散是满天星”</p>
