--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <iframe src="./video.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
           </div>
         </div>
-        <div class="container right container-style" style="padding: 7% 0% 0% 5.5rem;" bp="4@md offset-8@md 12 offset-1">
+        <div class="container right container-style" bp="4@md offset-8@md 12 offset-1">
           <h1>毕业纪念</h1>
           <p>时光飞逝, 匆匆三年.</p>
           <p>告别初中, 迎接高中.</p>
@@ -91,9 +91,9 @@
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
           <img class="img" src="assets/members.jpg">
-          <font style="color: #dcdfe6;position: absolute;"><strong>(点击图片预览大图)</strong></font>
+          <font class="img-small"><strong>(点击图片预览大图)</strong></font>
         </div>
-        <div class="container container-style" style="padding: 7% 0% 0% 5.5rem;" bp="first@md 12 5@md offset-2@md">
+        <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
           <p>这是一个温馨的大家庭.</p>
           <p>因为有了我们</p>
@@ -108,7 +108,7 @@
             <iframe src="./video1.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
           </div>
         </div>
-        <div class="container right container-style" style="padding: 7% 0% 0% 5.5rem;" bp="4@md offset-8@md 12 offset-1">
+        <div class="container right container-style" bp="4@md offset-8@md 12 offset-1">
           <h1>Look Back</h1>
           <p>一段被删减的视频</p>
           <p>从未在毕业典礼上播放过</p>
@@ -126,7 +126,7 @@
           <!--<iframe src="./video2.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" allowtransparency="true" name="main" style="width:100%;height:100%;flex: 1;z-index: 100px;background-size:cover;background-image:url(https://file.kjchmc.cn/d/忠德学校资料/学校照片/poster3.png)"> </iframe>-->
           </div>
         </div>
-        <div class="container container-style" style="padding: 7% 0% 0% 5.5rem;" bp="first@md 12 5@md offset-2@md">
+        <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>《放心去飞》</h1>
           <h1>教师合唱MV</h1>
           <p>“聚是一团火，散是满天星”</p>
