--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
   <meta name="msapplication-TileColor" content="#181818">
   <link type="text/css" rel="stylesheet" href="//unpkg.com/swiper/swiper-bundle.min.css">
   <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/npm/blueprint-css@3.1.1/dist/blueprint.min.css" />
-  <link type="text/css" rel="styleSheet" href="css/shake.css" />
+  <link type="text/css" rel="styleSheet" href="/css/shake.css" />
   <link type="text/css" rel="stylesheet" href="/css/scrollbar.css" />
-  <link type="text/css" rel="styleSheet" href="css/main.less" />
+  <link type="text/css" rel="styleSheet" href="/css/main.less" />
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.0/dist/jquery.min.js"></script>
+  <!-- 引入Fancybox依赖 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="./css/minecraft.css" />
@@ -91,7 +96,7 @@
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
           <img class="img" src="assets/members.jpg">
-          <font class="img-small"><strong>(点击图片预览大图)</strong></font>
+          <p><font class="img-small"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
@@ -139,18 +144,18 @@
 
       <h1>更多图片</h1>
       <div class="more-img">
-        <img src="./assets/images/1.png" />
-        <img src="./assets/images/2.png" />
-        <img src="./assets/images/3.png" />
-        <img src="./assets/images/4.png" />
-        <img src="./assets/images/5.png" />
-        <img src="./assets/images/6.png" />
-        <img src="./assets/images/7.png" />
-        <img src="./assets/images/8.png" />
-        <img src="./assets/images/9.png" />
-        <img src="./assets/images/10.png" />
-        <img src="./assets/images/11.png" />
-        <img src="./assets/images/12.png" />
+        <a href="./assets/images/1.png" data-fancybox="group"><img src="./assets/images/1.png" /></a>
+        <a href="./assets/images/2.png" data-fancybox="group"><img src="./assets/images/2.png" /></a>
+        <a href="./assets/images/3.png" data-fancybox="group"><img src="./assets/images/3.png" /></a>
+        <a href="./assets/images/4.png" data-fancybox="group"><img src="./assets/images/4.png" /></a>
+        <a href="./assets/images/5.png" data-fancybox="group"><img src="./assets/images/5.png" /></a>
+        <a href="./assets/images/6.png" data-fancybox="group"><img src="./assets/images/6.png" /></a>
+        <a href="./assets/images/7.png" data-fancybox="group"><img src="./assets/images/7.png" /></a>
+        <a href="./assets/images/8.png" data-fancybox="group"><img src="./assets/images/8.png" /></a>
+        <a href="./assets/images/9.png" data-fancybox="group"><img src="./assets/images/9.png" /></a>
+        <a href="./assets/images/10.png" data-fancybox="group"><img src="./assets/images/10.png" /></a>
+        <a href="./assets/images/11.png" data-fancybox="group"><img src="./assets/images/11.png" /></a>
+        <a href="./assets/images/12.png" data-fancybox="group"><img src="./assets/images/12.png" /></a>
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
