--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.0/dist/jquery.min.js"></script>
   <!-- 引入Fancybox依赖 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
@@ -240,6 +241,9 @@
 
   <!-- Fancybox预览样式 -->
   <script>
+    Fancybox.bind('[data-fancybox="gallery"]', {
+      //
+    });
     const options = {
       Toolbar: {
         display: {
@@ -253,7 +257,7 @@
             "flipX",
             "flipY",
           ],
-          right: ["slideshow", "thumbs", "close"],
+          right: ["slideshow", "download", "thumbs", "close"],
         },
       },
     };
