--- a/index.html
+++ b/index.html
@@ -241,22 +241,11 @@
 
   <!-- Fancybox预览样式 -->
   <script>
-    Fancybox.bind('[data-fancybox="gallery"]', {
-      //
-    });
     const options = {
       Toolbar: {
         display: {
           left: ["infobar"],
-          middle: [
-            "zoomIn",
-            "zoomOut",
-            "toggle1to1",
-            "rotateCCW",
-            "rotateCW",
-            "flipX",
-            "flipY",
-          ],
+          middle: [],
           right: ["slideshow", "download", "thumbs", "close"],
         },
       },
