--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
       </section>
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
-          <img class="img" src="assets/members.jpg">
-          <p><font class="img-small"><strong>(点击图片预览大图)</strong></font></p>
+          <a href="./assets/images/1.png" data-fancybox="group">
+            <img class="img" src="assets/members.jpg">
+          </a>
+          <p class="view"><font class="img-small"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
@@ -145,18 +147,18 @@
 
       <h1>更多图片</h1>
       <div class="more-img">
-        <a href="./assets/images/1.png" data-fancybox="group" data-download-src="./assets/images/1.png"><img src="./assets/images/1.png" /></a>
-        <a href="./assets/images/2.png" data-fancybox="group" data-download-src="./assets/images/2.png"><img src="./assets/images/2.png" /></a>
-        <a href="./assets/images/3.png" data-fancybox="group" data-download-src="./assets/images/3.png"><img src="./assets/images/3.png" /></a>
-        <a href="./assets/images/4.png" data-fancybox="group" data-download-src="./assets/images/4.png"><img src="./assets/images/4.png" /></a>
-        <a href="./assets/images/5.png" data-fancybox="group" data-download-src="./assets/images/5.png"><img src="./assets/images/5.png" /></a>
-        <a href="./assets/images/6.png" data-fancybox="group" data-download-src="./assets/images/6.png"><img src="./assets/images/6.png" /></a>
-        <a href="./assets/images/7.png" data-fancybox="group" data-download-src="./assets/images/7.png"><img src="./assets/images/7.png" /></a>
-        <a href="./assets/images/8.png" data-fancybox="group" data-download-src="./assets/images/8.png"><img src="./assets/images/8.png" /></a>
-        <a href="./assets/images/9.png" data-fancybox="group" data-download-src="./assets/images/9.png"><img src="./assets/images/9.png" /></a>
-        <a href="./assets/images/10.png" data-fancybox="group" data-download-src="./assets/images/10.png"><img src="./assets/images/10.png" /></a>
-        <a href="./assets/images/11.png" data-fancybox="group" data-download-src="./assets/images/11.png"><img src="./assets/images/11.png" /></a>
-        <a href="./assets/images/12.png" data-fancybox="group" data-download-src="./assets/images/12.png"><img src="./assets/images/12.png" /></a>
+        <a href="./assets/images/1.png" data-fancybox="group"><img src="./assets/images/1.png" /></a>
+        <a href="./assets/images/2.png" data-fancybox="group"><img src="./assets/images/2.png" /></a>
+        <a href="./assets/images/3.png" data-fancybox="group"><img src="./assets/images/3.png" /></a>
+        <a href="./assets/images/4.png" data-fancybox="group"><img src="./assets/images/4.png" /></a>
+        <a href="./assets/images/5.png" data-fancybox="group"><img src="./assets/images/5.png" /></a>
+        <a href="./assets/images/6.png" data-fancybox="group"><img src="./assets/images/6.png" /></a>
+        <a href="./assets/images/7.png" data-fancybox="group"><img src="./assets/images/7.png" /></a>
+        <a href="./assets/images/8.png" data-fancybox="group"><img src="./assets/images/8.png" /></a>
+        <a href="./assets/images/9.png" data-fancybox="group"><img src="./assets/images/9.png" /></a>
+        <a href="./assets/images/10.png" data-fancybox="group"><img src="./assets/images/10.png" /></a>
+        <a href="./assets/images/11.png" data-fancybox="group"><img src="./assets/images/11.png" /></a>
+        <a href="./assets/images/12.png" data-fancybox="group"><img src="./assets/images/12.png" /></a>
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
