--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </ul>
       </nav>-->
     </header>
-    <section id="first" bp="grid vertical-center" style="background-image: url(./assets/backgrounds/bg.png);">
+    <section id="first" bp="grid vertical-center">
       <div bp="12">
         <img alt="logo" class="shake-slow logo" src="assets/images/kjch.png">
         <h1>ZDSchool</h1>
@@ -96,10 +96,10 @@
       </section>
       <section bp="grid vertical-center">
         <div bp="last@md 4@md 10 offset-2">
-          <a href="./assets/images/1.png" data-fancybox="group">
+          <a href="./assets/members.jpg" data-fancybox>
             <img class="img" src="assets/members.jpg">
+            <p><font class="img-small"><strong>(点击图片预览大图)</strong></font></p>
           </a>
-          <p class="view"><font class="img-small"><strong>(点击图片预览大图)</strong></font></p>
         </div>
         <div class="container container-style" bp="first@md 12 5@md offset-2@md">
           <h1>我们毕业啦</h1>
