--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         <span class="icp" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
           <img src="./assets/images/ghs.png" style="float:left;"/>京公网安备11011202001885号</span></a>
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
+      <a class="version">构建号：<div id="commit-id">${process.env.COMMIT_ID}</div></a>
     </footer>
   </main>
 
