--- a/video2.html
+++ b/video2.html
@@ -24,7 +24,7 @@
   <script>
     let player = new Player({
       "id": "mse",
-      "url": "https://file.kjchmc.cn/d/忠德学校资料/放心去飞MV.mp4",
+      "url": "https://file.kjchmc.cn/d/忠德学校资料/放心去飞MV原唱.mp4",
       "playsinline": true,
       "whitelist": [
         ""
