--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
   <!-- Fancybox预览样式 -->
   <script>
-    Fancybox.bind('[data-fancybox="gallery"]', {
+    Fancybox.bind('[data-fancybox="group"]', {
       Toolbar: {
         display: {
           left: ["infobar"],
